// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkButton renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "purple",
      "flexBasis": "10%",
      "justifyContent": "space-evenly",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 36,
      }
    }
  >
    Mark
  </Text>
</View>
`;

exports[`MarkedMap render a marker when a coordinate is provided 1`] = `
<MapView
  initialRegion={
    Object {
      "latitude": 0,
      "latitudeDelta": 1,
      "longitude": 0,
      "longitudeDelta": 1,
    }
  }
  style={
    Object {
      "flexBasis": "90%",
    }
  }
>
  <Marker
    coordinate={
      Object {
        "latitude": 5,
        "longitude": 5,
      }
    }
    description="You Parked Here!"
    title="Car"
  />
</MapView>
`;

exports[`MarkedMap renders correctly for the provided region with no markers by default 1`] = `
<MapView
  initialRegion={
    Object {
      "latitude": 0,
      "latitudeDelta": 1,
      "longitude": 0,
      "longitudeDelta": 1,
    }
  }
  style={
    Object {
      "flexBasis": "90%",
    }
  }
/>
`;
